--- a/index.html
+++ b/index.html
@@ -241,16 +241,14 @@
                 <h5>Основы SEO-оптимизации</h5>
               </div>
               <ul>
-                <li>Title (заголовок страницы)</li>
-                <li>Meta Description (описание страницы)</li>
-                <li>Keywords (ключевые слова страницы)</li>
-                <li>
-                  Headings (SEO заголовки страницы: &lt;H1&gt;, &lt;H2&gt;,
-                  &lt;H3&gt;, ...)
-                </li>
-                <li>Preview (представление сайта в поиске)</li>
-                <li>Согласованность ключевых слов</li>
-                <li>Word cloud (облако ключевых слов страницы)</li>
+                <li><a href="#" class="text-black">Title (заголовок страницы)</a> </li>
+                <li><a href="#">Meta Description (описание страницы)</a> </li>
+                <li><a href="#">Keywords (ключевые слова страницы)</a> </li>
+                <li><a href="#">Headings (SEO заголовки страницы: &lt;H1&gt;, &lt;H2&gt;,
+                    &lt;H3&gt;, ...)</a></li>
+                <li><a href="#">Preview (представление сайта в поиске)</a> </li>
+                <li><a href="#">Согласованность ключевых слов</a> </li>
+                <li><a href="#">Word cloud (облако ключевых слов страницы)</a> </li>
               </ul>
             </div>
 
@@ -260,14 +258,14 @@
                 <h5>Контент и структура</h5>
               </div>
               <ul>
-                <li>Img alt Attribute (альтернативный текст)</li>
-                <li>Соотношение ТЕКСТ / HTML</li>
-                <li>Flash-контент</li>
-                <li>Фреймы</li>
-                <li>Размер страницы сайта</li>
-                <li>Нерабочие ссылки</li>
-                <li>URL (чистые ссылки)</li>
-                <li>Ссылки на соцсети на вашем сайте</li>
+                <li><a href="#">Img alt Attribute (альтернативный текст)</a> </li>
+                <li><a href="#">Соотношение ТЕКСТ / HTML</a> </li>
+                <li><a href="#">Flash-контент</a> </li>
+                <li><a href="#">Фреймы</a> </li>
+                <li><a href="#">Размер страницы сайта</a></li>
+                <li><a href="#">Нерабочие ссылки</a> </li>
+                <li><a href="#">URL (чистые ссылки)</a> </li>
+                <li><a href="#">Ссылки на соцсети на вашем сайте</a></li>
               </ul>
             </div>
 
@@ -277,12 +275,12 @@
                 <h5>Доменные данные</h5>
               </div>
               <ul>
-                <li>Domain Age (возраст домена)</li>
-                <li>Данные WHOIS домена</li>
-                <li>Количество страниц в поиске</li>
-                <li>Индексирование страниц в поиске</li>
-                <li>Backlinks (обратные ссылки)</li>
-                <li>Похожие домены (с такой же частью)</li>
+                <li><a href="#">Domain Age (возраст домена)</a></li>
+                <li><a href="#">Данные WHOIS домена</a></li>
+                <li><a href="#">Количество страниц в поиске</a></li>
+                <li><a href="#">Индексирование страниц в поиске</a></li>
+                <li><a href="#">Backlinks (обратные ссылки)</a></li>
+                <li><a href="#">Похожие домены (с такой же частью)</a></li>
               </ul>
             </div>
 
@@ -292,9 +290,9 @@
                 <h5>Мобильная оптимизация</h5>
               </div>
               <ul>
-                <li>Адаптация под мобильные устройства</li>
-                <li>Mobile View (вид на телефоне)</li>
-                <li>Flash-контент в мобильной версии</li>
+                <li><a href="#">Адаптация под мобильные устройства</a></li>
+                <li><a href="#">Mobile View (вид на телефоне)</a></li>
+                <li><a href="#">Flash-контент в мобильной версии</a></li>
               </ul>
             </div>
 
@@ -304,9 +302,9 @@
                 <h5>Поисковая оптимизация</h5>
               </div>
               <ul>
-                <li>Безопасный просмотр сайта</li>
-                <li>E-mail privacy</li>
-                <li>404 Not Found (страница ошибки)</li>
+                <li><a href="#">Безопасный просмотр сайта</a></li>
+                <li><a href="#">E-mail privacy</a></li>
+                <li><a href="#">404 Not Found (страница ошибки)</a></li>
               </ul>
             </div>
 
@@ -316,32 +314,34 @@
                 <h5>Техническая оптимизация</h5>
               </div>
               <ul>
-                <li>Favicon</li>
-                <li>GZIP-сжатие</li>
-                <li>TTFB (время ответа сервера)</li>
-                <li>
-                  PageSpeed Insights (скорость загрузки на компьютерах и
-                  ноутбуках)
+                <li><a href="#">Favicon</a> </li>
+                <li><a href="#">GZIP-сжатие</a> </li>
+                <li><a href="#">TTFB (время ответа сервера)</a> </li>
+                <li><a href="#">PageSpeed Insights (скорость загрузки на компьютерах и
+                    ноутбуках)</a></li>
+                <li><a href="#">
+
+                    PageSpeed Insights (скорость загрузки на мобильных
+                    устройствах)
+                  </a>
                 </li>
-                <li>
-                  PageSpeed Insights (скорость загрузки на мобильных
-                  устройствах)
+                <li><a href="#">Кодировка сайта</a> </li>
+                <li><a href="#">DOCTYPE (тип документа)</a> </li>
+                <li><a href="#"> W3C Validity</a></li>
+                <li><a href="#">Sitemap</a> </li>
+                <li><a href="#">
+                    Robots.txt (файл с правилами <br />
+                    индексации)
+                  </a>
+
                 </li>
-                <li>Кодировка сайта</li>
-                <li>DOCTYPE (тип документа)</li>
-                <li>W3C Validity</li>
-                <li>Sitemap</li>
-                <li>
-                  Robots.txt (файл с правилами <br />
-                  индексации)
-                </li>
-                <li>URL (чистые ссылки — без символов)</li>
-                <li>Поддержка в URL</li>
-                <li>Canonical IP (IP-канонизация)</li>
-                <li>Редирект с WWW на без-WWW</li>
-                <li>Lang (язык сайта)</li>
-                <li>IP-адрес сервера</li>
-                <li>Аналитика сайта</li>
+                <li><a href="#">URL (чистые ссылки — без символов)</a> </li>
+                <li><a href="#">Поддержка в URL</a></li>
+                <li><a href="#">Canonical IP (IP-канонизация)</a></li>
+                <li><a href="#">Редирект с WWW на без-WWW</a></li>
+                <li><a href="#">Lang (язык сайта)</a></li>
+                <li><a href="#">IP-адрес сервера</a></li>
+                <li><a href="#">Аналитика сайта</a></li>
               </ul>
             </div>
           </div>
