--- a/index.html
+++ b/index.html
@@ -3191,7 +3191,7 @@
                 </picture>
               </div>
             </div>
-            <div id="sxo_domen"  class="analytics_page_item d-flex align-items-center justify-content-between">
+            <div id="sxo_domen" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
@@ -3299,7 +3299,7 @@
                 <a href="#" class="button no_bg">Развернуть текст</a>
               </div>
             </div>
-            <div id="sxo_zone"  class="analytics_page_item d-flex align-items-center justify-content-between">
+            <div id="sxo_zone" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="analytics_page_item_left">
                 <span class="number">31.</span>
                 <h2 class="section_title">
@@ -4859,7 +4859,7 @@
                 <a href="#" class="button no_bg">Развернуть текст</a>
               </div>
             </div>
-            <div id="coder" class="analytics_page_item d-flex align-items-center justify-content-between" >
+            <div id="coder" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="analytics_page_item_left">
                 <span class="number">45.</span>
                 <h2 class="section_title">
@@ -5094,7 +5094,7 @@
                 <a href="#" class="button no_bg">Развернуть текст</a>
               </div>
             </div>
-            <div  class="analytics_page_item d-flex align-items-center justify-content-between">
+            <div class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="analytics_page_item_left">
                 <span class="number">47.</span>
                 <h2 class="section_title">
@@ -5776,7 +5776,8 @@
         <div class="container">
           <div class="blog_top d-flex align-items-center justify-content-between">
             <h2 class="section_title">Блог об анализе сайтов SEO онлайн</h2>
-            <a href="" class="button no_bg">В раздел блога</a>
+            <a href="https://seo.computer/ru/blog?search=%D0%90%D0%BD%D0%B0%D0%BB%D0%B8%D0%B7" class="button no_bg">В
+              раздел блога</a>
           </div>
           <div class="blog_items d-flex justify-content-between">
             <div class="blog_item">
@@ -5786,9 +5787,8 @@
                   8 самых важных типов ключевых слов для seo
                 </h4>
                 <p>
-                  8 самых важных типов ключевых слов для SEO. 1. Исходные
-                  ключевые слова. Это основные ключевые фразы, которые
-                  определяют вашу специализацию и тематику...
+                  8 самых важных типов ключевых слов для SEO. 1. Исходные ключевые слова. Это основные ключевые фразы,
+                  которые определяют вашу специализацию и тематику...
                 </p>
                 <a href="https://seo.computer/ru/blog/what-is-an-seo-audit-main-features-when-compiling-an"
                   class="blog_item_link d-flex align-items-center justify-content-center">Читать далее</a>
@@ -5866,11 +5866,9 @@
   <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content custom-modal">
-
         <div class="modal-body d-flex align-items-center justify-content-between">
           <!-- Rasm joyi -->
           <div class="modal__contents">
-
             <div class="modal_top">
               <h2 class="section_title">Оставьте заявку</h2>
               <p class="text-muted mt-1">и наш SEO специалист свяжется с Вами в ближайшее время</p>
@@ -5887,6 +5885,9 @@
               </div>
               <button type="submit" class="button   ">Заказать исправление</button>
             </div>
+            <p class="policy mt-3">Оставляя заявку, вы соглашаетесь с <a
+                href="https://seo.computer/ru/policy">Политикой
+                конфиденциальности</a></p>
           </div>
 
           <div class="img-container d-flex align-items-start">
