--- a/index.html
+++ b/index.html
@@ -825,8 +825,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/6.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/6.png" />
+                  <img src="assets/images/desctop/6.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
@@ -972,8 +972,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/7.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/7.png" />
+                  <img src="assets/images/desctop/7.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -982,8 +982,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/8.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/8.png" />
+                  <img src="assets/images/desctop/8.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
@@ -1153,8 +1153,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/9.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/9.png" />
+                  <img src="assets/images/desctop/9.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -1163,8 +1163,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/10.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/10.png" />
+                  <img src="assets/images/desctop/10.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
@@ -1354,8 +1354,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/11.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/11.png" />
+                  <img src="assets/images/desctop/11.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -1364,8 +1364,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/12.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/12.png" />
+                  <img src="assets/images/desctop/12.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
@@ -1556,8 +1556,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/13.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/13.png" />
+                  <img src="assets/images/desctop/13.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -1566,8 +1566,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/14.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/14.png" />
+                  <img src="assets/images/desctop/14.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
@@ -1757,8 +1757,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/15.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/15.png" />
+                  <img src="assets/images/desctop/15.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -1767,8 +1767,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/16.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/16.png" />
+                  <img src="assets/images/desctop/16.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
@@ -1971,8 +1971,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/17.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/17.png" />
+                  <img src="assets/images/desctop/17.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -1981,8 +1981,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/18.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/18.png" />
+                  <img src="assets/images/desctop/18.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
@@ -2173,8 +2173,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/19.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/19.png" />
+                  <img src="assets/images/desctop/19.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -2183,8 +2183,8 @@
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
                   <source media="(max-width: 767px)" srcset="assets/images/mobile/20.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/20.png" />
+                  <img src="assets/images/desctop/20.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
