--- a/index.html
+++ b/index.html
@@ -4525,14 +4525,14 @@
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/mobile/42.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/desctop/42.png" />
-                  <img src="assets/images/desctop/42.png" alt="Adaptiv rasm" />
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/38.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/38.png" />
+                  <img src="assets/images/desctop/38.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div id="schot" class="analytics_page_item_left">
                 <div class="analytics_page_item_left_top text-end">
-                  <span class="number">42.</span>
+                  <span class="number">38.</span>
                   <h2 class="section_title">
                     Анализ
                     <a href="#" class="button">Счетчиков</a>
@@ -4637,7 +4637,7 @@
             </div>
             <div id="w3c" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="analytics_page_item_left">
-                <span class="number">43.</span>
+                <span class="number">39.</span>
                 <h2 class="section_title">
                   Анализ
                   <a href="#" class="button">Валидности HTML</a>
@@ -4740,9 +4740,9 @@
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/mobile/43.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/desctop/43.png" />
-                  <img src="assets/images/desctop/43.png" alt="Adaptiv rasm" />
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/39.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/39.png" />
+                  <img src="assets/images/desctop/39.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -4750,14 +4750,14 @@
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/mobile/44.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/desctop/44.png" />
-                  <img src="assets/images/desctop/44.png" alt="Adaptiv rasm" />
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/40.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/40.png" />
+                  <img src="assets/images/desctop/40.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
                 <div class="analytics_page_item_left_top text-end">
-                  <span class="number">44.</span>
+                  <span class="number">40.</span>
                   <h2 class="section_title">
                     Анализ
                     <a href="#" class="button">Типа документа</a>
@@ -4862,7 +4862,7 @@
             </div>
             <div id="coder" class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="analytics_page_item_left">
-                <span class="number">45.</span>
+                <span class="number">41.</span>
                 <h2 class="section_title">
                   Анализ
                   <a href="#" class="button">Кодировки</a>
@@ -4970,9 +4970,9 @@
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/seo_img.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/41.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/41.png" />
+                  <img src="assets/images/desctop/41.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -4980,14 +4980,14 @@
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/seo_img.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/42.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/42.png" />
+                  <img src="assets/images/desctop/42.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
                 <div class="analytics_page_item_left_top text-end">
-                  <span class="number">46.</span>
+                  <span class="number">42.</span>
                   <h2 class="section_title">
                     Анализ
                     <a href="#" class="button">Cоциальных сетей</a>
@@ -5097,7 +5097,7 @@
             </div>
             <div class="analytics_page_item d-flex align-items-center justify-content-between">
               <div class="analytics_page_item_left">
-                <span class="number">47.</span>
+                <span class="number">43.</span>
                 <h2 class="section_title">
                   Анализ
                   <a href="#" class="button">Внутренних ссылок</a>
@@ -5206,9 +5206,9 @@
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/seo_img.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/43.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/43.png" />
+                  <img src="assets/images/desctop/43.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
             </div>
@@ -5216,14 +5216,14 @@
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
-                  <source media="(max-width: 767px)" srcset="assets/images/seo_img.png" />
-                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
-                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                  <source media="(max-width: 767px)" srcset="assets/images/mobile/44.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/desctop/44.png" />
+                  <img src="assets/images/desctop/44.png" alt="Adaptiv rasm" />
                 </picture>
               </div>
               <div class="analytics_page_item_left">
                 <div class="analytics_page_item_left_top text-end">
-                  <span class="number">48.</span>
+                  <span class="number">44.</span>
                   <h2 class="section_title">
                     Анализ
                     <a href="#" class="button">Неработающих ссылок</a>
@@ -5785,13 +5785,14 @@
               <img src="assets/images/blog1.png" alt="" />
               <div class="blog_item_body">
                 <h4 class="blog_item_title">
-                  8 самых важных типов ключевых слов для seo
+                  8 самых важных типов ключевых слов для SEO
                 </h4>
+
                 <p>
                   8 самых важных типов ключевых слов для SEO. 1. Исходные ключевые слова. Это основные ключевые фразы,
-                  которые определяют вашу специализацию и тематику...
+                  которые определяют вашу специализацию и...
                 </p>
-                <a href="https://seo.computer/ru/blog/what-is-an-seo-audit-main-features-when-compiling-an"
+                <a href="https://seo.computer/ru/blog/seo-website-analysis-what-does-the-process-include"
                   class="blog_item_link d-flex align-items-center justify-content-center">Читать далее</a>
               </div>
             </div>
@@ -5799,14 +5800,13 @@
               <img src="assets/images/blog2.png" alt="" />
               <div class="blog_item_body">
                 <h4 class="blog_item_title">
-                  Seo-копирайтинг: как писать тексты для сайтов
+                  SEO-копирайтинг: как писать тексты для сайтов
                 </h4>
                 <p>
-                  SEO-копирайтинг: как писать тексты для сайтов. SEO-тексты
-                  становятся сложнее. Ранее в поисковых системах продвигались
-                  страницы, насыщенные ключевыми...
+                  SEO-копирайтинг: как писать тексты для сайтов. SEO-тексты становятся сложнее. Ранее в поисковых
+                  системах продвигались страницы, насыщенные ключевыми...
                 </p>
-                <a href="https://seo.computer/ru/blog?page=442"
+                <a href="https://seo.computer/ru/blog/analysis-of-a-competitors-website-how-to-do-it-and"
                   class="blog_item_link d-flex justify-content-center">Читать далее</a>
               </div>
             </div>
@@ -5814,14 +5814,13 @@
               <img src="assets/images/blog3.png" alt="" />
               <div class="blog_item_body">
                 <h4 class="blog_item_title">
-                  Seo-ошибка стоимостью сотни тысяч заказчику...
+                  SEO-ошибка стоимостью сотни тысяч заказчику...
                 </h4>
                 <p>
-                  SEO-ошибка стоимостью сотни тысяч заказчику за 30
-                  днейНемного предыстории. У заказчика сменился руководитель
-                  отдела, который решил заменить меня на...
+                  SEO-ошибка стоимостью сотни тысяч заказчику за 30 днейНемного предыстории. У заказчика сменился
+                  руководитель отдела, который решил заменить меня на д
                 </p>
-                <a href="https://seo.computer/ru/blog/effective-tools-for-analyzing-and-improving-seo"
+                <a href="https://seo.computer/ru/blog/free-seo-tools"
                   class="blog_item_link d-flex align-items-center justify-content-center">Читать далее</a>
               </div>
             </div>
@@ -5829,14 +5828,13 @@
               <img src="assets/images/blog4.png" alt="" />
               <div class="blog_item_body">
                 <h4 class="blog_item_title">
-                  Seo-шок! эти 'бесполезные' ссылки...
+                  SEO-шок! Эти 'бесполезные' ссылки...
                 </h4>
                 <p>
-                  SEO-шок! Эти 'бесполезные' ссылки могут поднять ваш сайт в
-                  ТОП. Проверено!. Ссылки Nofollow — это гиперссылки с тегом
-                  rel="nofollow". Этот тег сообща...
+                  SEO-шок! Эти 'бесполезные' ссылки могут поднять ваш сайт в ТОП. Проверено!. Ссылки Nofollow — это
+                  гиперссылки с тегом rel="nofollow". Этот тег сообща...
                 </p>
-                <a href="https://seo.computer/ru/blog/learn-seo-website-audit"
+                <a href="https://seo.computer/ru/blog/speed-up-your-site-by-9-times-for-seo"
                   class="blog_item_link d-flex justify-content-center">Читать далее</a>
               </div>
             </div>
